--- a/src/components/Row.css
+++ b/src/components/Row.css
@@ -57,6 +57,8 @@ span.itemText {
 	width: 100%;
 	color: var(--background);
 	cursor: pointer;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 span.itemText.isCompleted {
